--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <main>
         <section class="grid-container">
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+1+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 1 for navigation in Project Arzenith"
+                <img src="img/GOD OF WAR.png" 
+                     alt="God Of War"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
