--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Arzenith - Page 1</title>
+    <title>Project Arzenith - Get Free Steam Manifest Game From Here</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -20,13 +20,13 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+2+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 2 for navigation in Project Arzenith"
+                <img src="img/TEKKEN7.png" 
+                     alt="TEKKEN7"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+3+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 3 for navigation in Project Arzenith"
+                <img src="img/TEKKEN8.png" 
+                     alt="TEKKEN8"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
