--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+4+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 4 for navigation in Project Arzenith"
+                <img src="img/FARCRY PRIMAL.png" 
+                     alt="FarCry Primal"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
