--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+5+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 5 for navigation in Project Arzenith"
+                <img src="img/METAL GEAR SOLID SNAKE EATER.png" 
+                     alt="Metal Gear Solid:Snake Eater"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
