--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+6+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 6 for navigation in Project Arzenith"
+                <img src="img/READY OR NOT.png" 
+                     alt="Ready Or Not"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+7+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 7 for navigation in Project Arzenith"
+                <img src="img/THE LAST OF US PART1.png" 
+                     alt="The Last Of Us Part I"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+8+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 8 for navigation in Project Arzenith"
+                <img src="img/GOD OF WAR RAGNAROK.png" 
+                     alt="God Of War Ragnarok"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
