--- a/index.html
+++ b/index.html
@@ -55,48 +55,48 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+9+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 9 for navigation in Project Arzenith"
+                <img src="img/ASSASSINS CREED UNITY.png" 
+                     alt="Assassins Creed Unity"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+10+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 10 for navigation in Project Arzenith"
+                <img src="img/ASSASSINS CREED BLACKFLAG.png" 
+                     alt="Assassins Creed Black Flag"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+11+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 11 for navigation in Project Arzenith"
+                <img src="img/FARCRY4.png" 
+                     alt="FAR CRY 4"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+12+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 12 for navigation in Project Arzenith"
+                <img src="img/GHOST OF TSUSHIMA.png" 
+                     alt="Ghost Of Tsushima Directors Cut"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+13+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 13 for navigation in Project Arzenith"
+                <img src="img/JDM.png" 
+                     alt="Japanese Drift Master"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+14+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 14 for navigation in Project Arzenith"
+                <img src="img/RED DEAD REDEMPTION.png" 
+                     alt="RDR"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+15+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 15 for navigation in Project Arzenith"
+                <img src="img/RED DEAD REDEMPTION 2.png" 
+                     alt="RDRII"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+16+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 16 for navigation in Project Arzenith"
+                <img src="img/WWE 2K23.png" 
+                     alt="WWE 2K23"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+17+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 17 for navigation in Project Arzenith"
+                <img src="img/YAKUZA0.png" 
+                     alt="Yakuza 0"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
