--- a/index.html
+++ b/index.html
@@ -100,33 +100,33 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+18+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 18 for navigation in Project Arzenith"
+                <img src="img/ASSASSINS CREED ROGUE.png" 
+                     alt="Assassins Creed Rogue"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+19+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 19 for navigation in Project Arzenith"
+                <img src="img/WWE2K24.png" 
+                     alt="WWE 2K24"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+20+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 20 for navigation in Project Arzenith"
+                <img src="img/FAR CRY 5.png" 
+                     alt="Far Cry 5"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+21+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 21 for navigation in Project Arzenith"
+                <img src="img/FAR CRY NEWDAWN.png" 
+                     alt="Far Cry New Dawn"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+22+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 22 for navigation in Project Arzenith"
+                <img src="img/JUST CAUSE 3.png" 
+                     alt="Just Cause 3"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+23+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 23 for navigation in Project Arzenith"
+                <img src="img/JUST CAUSE 4.png" 
+                     alt="Just Cause 4"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
