--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="img/WWE2K24.png" 
+                <img src="img/WWE 2K24.png" 
                      alt="WWE 2K24"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
@@ -115,7 +115,7 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="img/FAR CRY NEWDAWN.png" 
+                <img src="img/FAR CRY NEW DAWN.png" 
                      alt="Far Cry New Dawn"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
@@ -130,8 +130,8 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Button+24+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 24 for navigation in Project Arzenith"
+                <img src="img/WWE 2K25.png" 
+                     alt="WWE 2K25"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
         </section>
