--- a/page2.html
+++ b/page2.html
@@ -146,6 +146,7 @@
         <a href="page6.html" class="page-link">Page 6</a>
         <a href="page7.html" class="page-link">Page 7</a>
         <a href="page8.html" class="page-link">Page 8</a>
+        <a href="bypass.html" class="page-link">BYPASS</a>
     </nav>
     
     <footer>
