--- a/bypass.html
+++ b/bypass.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Arzenith - Page 8</title>
+    <title>🌠 Project Arzenith - Download Free Manifest Steam Here!</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Project Arzenith</h1>
+            <h2>Download Free Manifest Steam Here!</h2>
     </header>
     
     <main>
@@ -47,16 +48,6 @@
             <a href="#" class="grid-item">
                 <img src="https://placehold.co/180x320?text=Page+8+Button+7+Image+for+Project+Arzenith" 
                      alt="Clickable Button 7 for navigation in Project Arzenith Page 8"
-                     onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
-            </a>
-            <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+8+Button+8+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 8 for navigation in Project Arzenith Page 8"
-                     onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
-            </a>
-            <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+8+Button+9+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 9 for navigation in Project Arzenith Page 8"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
         </section>
