--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Arzenith - Get Free Steam Manifest Game From Here</title>
+    <title>🌠 Project Arzenith - Download Free Manifest Steam Here!</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
