--- a/bypass.html
+++ b/bypass.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Project Arzenith</h1>
-            <h2>Download Free Manifest Steam Here!</h2>
+        <span class="rainbow">🔥✨ Download Free Manifest Steam Here! 🔥✨</span>
     </header>
     
     <main>
