--- a/page7.html
+++ b/page7.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Project Arzenith</h1>
+        <marquee><span class="rainbow">🔥✨ Download Free Manifest Steam Here! 🔥✨</span></marquee>
     </header>
     
     <main>
