--- a/bypass.html
+++ b/bypass.html
@@ -54,15 +54,15 @@
     </main>
     
     <nav class="pagination">
-        <a href="index.html" class="page-link">Page 1</a>
-        <a href="page2.html" class="page-link">Page 2</a>
-        <a href="page3.html" class="page-link">Page 3</a>
-        <a href="page4.html" class="page-link">Page 4</a>
-        <a href="page5.html" class="page-link">Page 5</a>
-        <a href="page6.html" class="page-link">Page 6</a>
-        <a href="page7.html" class="page-link">Page 7</a>
-        <a href="page8.html" class="page-link">Page 8</a>
-        <a href="bypass.html" class="page-link active">BYPASS</a>
+        <a href="index.html" class="page-link active">1</a>
+        <a href="page2.html" class="page-link">2</a>
+        <a href="page3.html" class="page-link">3</a>
+        <a href="page4.html" class="page-link">4</a>
+        <a href="page5.html" class="page-link">5</a>
+        <a href="page6.html" class="page-link">6</a>
+        <a href="page7.html" class="page-link">7</a>
+        <a href="page8.html" class="page-link">8</a>
+        <a href="bypass.html" class="page-link">BYPASS</a>
     </nav>
     
     <footer>
