--- a/bypass.html
+++ b/bypass.html
@@ -54,7 +54,7 @@
     </main>
     
     <nav class="pagination">
-        <a href="index.html" class="page-link active">1</a>
+        <a href="index.html" class="page-link">1</a>
         <a href="page2.html" class="page-link">2</a>
         <a href="page3.html" class="page-link">3</a>
         <a href="page4.html" class="page-link">4</a>
@@ -62,7 +62,7 @@
         <a href="page6.html" class="page-link">6</a>
         <a href="page7.html" class="page-link">7</a>
         <a href="page8.html" class="page-link">8</a>
-        <a href="bypass.html" class="page-link">BYPASS</a>
+        <a href="bypass.html" class="page-link active">BYPASS</a>
     </nav>
     
     <footer>
