--- a/page2.html
+++ b/page2.html
@@ -139,8 +139,8 @@
     </main>
     
     <nav class="pagination">
-        <a href="index.html" class="page-link active">1</a>
-        <a href="page2.html" class="page-link">2</a>
+        <a href="index.html" class="page-link">1</a>
+        <a href="page2.html" class="page-link active">2</a>
         <a href="page3.html" class="page-link">3</a>
         <a href="page4.html" class="page-link">4</a>
         <a href="page5.html" class="page-link">5</a>
