--- a/page3.html
+++ b/page3.html
@@ -139,9 +139,9 @@
     </main>
     
     <nav class="pagination">
-        <a href="index.html" class="page-link active">1</a>
+        <a href="index.html" class="page-link">1</a>
         <a href="page2.html" class="page-link">2</a>
-        <a href="page3.html" class="page-link">3</a>
+        <a href="page3.html" class="page-link active">3</a>
         <a href="page4.html" class="page-link">4</a>
         <a href="page5.html" class="page-link">5</a>
         <a href="page6.html" class="page-link">6</a>
