--- a/page4.html
+++ b/page4.html
@@ -139,10 +139,10 @@
     </main>
     
     <nav class="pagination">
-        <a href="index.html" class="page-link active">1</a>
+        <a href="index.html" class="page-link">1</a>
         <a href="page2.html" class="page-link">2</a>
         <a href="page3.html" class="page-link">3</a>
-        <a href="page4.html" class="page-link">4</a>
+        <a href="page4.html" class="page-link active">4</a>
         <a href="page5.html" class="page-link">5</a>
         <a href="page6.html" class="page-link">6</a>
         <a href="page7.html" class="page-link">7</a>
