--- a/page2.html
+++ b/page2.html
@@ -16,48 +16,48 @@
     <main>
         <section class="grid-container">
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+1+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 1 for navigation in Project Arzenith Page 2"
+                <img src="img/ASSASSINS CREED ORIGINS.png" 
+                     alt="ASSASSINS CREED ORIGINS"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+2+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 2 for navigation in Project Arzenith Page 2"
+                <img src="img/ASSASSINS CREED ODYSSEY.png" 
+                     alt="ASSASSINS CREED ODYSSEY"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+3+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 3 for navigation in Project Arzenith Page 2"
+                <img src="img/ASSASSINS CREED MIRAGE.png" 
+                     alt="ASSASSINS CREED MIRAGE"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+4+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 4 for navigation in Project Arzenith Page 2"
+                <img src="img/LIKE A DRAGON PIRATE YAKUZA IN HAWAII.png" 
+                     alt="LIKE A DRAGON: PIRATE YAKUZA IN HAWAII"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+5+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 5 for navigation in Project Arzenith Page 2"
+                <img src="img/WATCHDOGS.png" 
+                     alt="Watch Dogs"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+6+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 6 for navigation in Project Arzenith Page 2"
+                <img src="img/WATCHDOGS 2.png" 
+                     alt="Watch Dogs 2"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+7+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 7 for navigation in Project Arzenith Page 2"
+                <img src="img/OUTLAST.png" 
+                     alt="OUTLAST"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+8+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 8 for navigation in Project Arzenith Page 2"
+                <img src="img/OUTLAST WHISTLEBLOWER.png" 
+                     alt="OUTLAST: WHISTLEBLOWER"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+9+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 9 for navigation in Project Arzenith Page 2"
+                <img src="img/OUTLAST 2.png" 
+                     alt="OUTLAST II"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
