--- a/page2.html
+++ b/page2.html
@@ -61,38 +61,38 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+10+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 10 for navigation in Project Arzenith Page 2"
+                <img src="img/RE2.png" 
+                     alt="RESIDENT EVIL 2"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+11+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 11 for navigation in Project Arzenith Page 2"
+                <img src="img/RE3.png" 
+                     alt="RESIDENT EVIL 3"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+12+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 12 for navigation in Project Arzenith Page 2"
+                <img src="img/RE4.png" 
+                     alt="RESIDENT EVIL 4"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+13+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 13 for navigation in Project Arzenith Page 2"
+                <img src="img/RE5.png" 
+                     alt="RESIDENT EVIL 5"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+14+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 14 for navigation in Project Arzenith Page 2"
+                <img src="img/RE6.png" 
+                     alt="RESIDENT EVIL 6"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+15+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 15 for navigation in Project Arzenith Page 2"
+                <img src="img/RE7 BIOHAZARD.png" 
+                     alt="RESIDENT EVIL 7 BIOHAZARD"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+16+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 16 for navigation in Project Arzenith Page 2"
+                <img src="img/RE VILLAGE.png" 
+                     alt="RESIDENT EVIL VILLAGE"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
