--- a/page2.html
+++ b/page2.html
@@ -96,13 +96,13 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+17+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 17 for navigation in Project Arzenith Page 2"
+                <img src="img/ELDEN RING.png" 
+                     alt="ELDEN RING"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+18+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 18 for navigation in Project Arzenith Page 2"
+                <img src="img/ELDEN RING NIGHTMARE.png" 
+                     alt="ELDEN RING NIGHTMARE"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
