--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://www.mediafire.com/file/nt4ljeq00lm3zf7/GOD_OF_WAR.zip/file" class="grid-item">
                 <img src="img/GOD OF WAR.png" 
                      alt="God Of War"
-                     onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
+                     onerror="this.src='https://www.mediafire.com/file/nt4ljeq00lm3zf7/GOD_OF_WAR.zip/file'">
             </a>
             <a href="https://www.mediafire.com/file/o0t4jonk6tg4pev/TEKKEN7.zip/file" class="grid-item">
                 <img src="img/TEKKEN7.png" 
