--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     
     <main>
         <section class="grid-container">
-            <a href="https://www.mediafire.com/file/nt4ljeq00lm3zf7/GOD_OF_WAR.zip/file" class="grid-item">
+            <a href="https://www.mediafire.com/file/nt4ljeq00lm3zf7/GOD_OF_WAR.zip/file" 
+               class="grid-item" 
+               target="_blank" 
+               rel="noopener noreferrer">
                 <img src="img/GOD OF WAR.png" 
                      alt="God Of War"
                      onerror="this.src='https://www.mediafire.com/file/nt4ljeq00lm3zf7/GOD_OF_WAR.zip/file'">
