--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     
     <main>
         <section class="grid-container">
-            <a href="https://www.mediafire.com/file/nt4ljeq00lm3zf7/GOD_OF_WAR.zip/file" 
-               class="grid-item" 
-               target="_blank" 
-               rel="noopener noreferrer">
+            <a href="https://www.mediafire.com/file/nt4ljeq00lm3zf7/GOD_OF_WAR.zip/file" class="grid-item">
                 <img src="img/GOD OF WAR.png" 
                      alt="God Of War"
                      onerror="this.src='https://www.mediafire.com/file/nt4ljeq00lm3zf7/GOD_OF_WAR.zip/file'">
@@ -26,37 +23,37 @@
             <a href="https://www.mediafire.com/file/o0t4jonk6tg4pev/TEKKEN7.zip/file" class="grid-item">
                 <img src="img/TEKKEN7.png" 
                      alt="TEKKEN7"
-                     onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
+                     onerror="this.src='https://www.mediafire.com/file/o0t4jonk6tg4pev/TEKKEN7.zip/file'">
             </a>
             <a href="https://www.mediafire.com/file/wvdzljvt90sughk/TEKKEN_8.zip/file" class="grid-item">
                 <img src="img/TEKKEN8.png" 
                      alt="TEKKEN8"
-                     onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
+                     onerror="this.src='https://www.mediafire.com/file/wvdzljvt90sughk/TEKKEN_8.zip/file'">
             </a>
             <a href="https://www.mediafire.com/file/y9yzuj8mlh6djpb/FARCRY_PRIMAL.zip/file" class="grid-item">
                 <img src="img/FARCRY PRIMAL.png" 
                      alt="FarCry Primal"
-                     onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
+                     onerror="this.src='https://www.mediafire.com/file/y9yzuj8mlh6djpb/FARCRY_PRIMAL.zip/file'">
             </a>
             <a href="https://www.mediafire.com/file/y5nz8mruwek07c1/METAL_GEAR_SOLID_SNAKE_EATER.zip/file" class="grid-item">
                 <img src="img/METAL GEAR SOLID SNAKE EATER.png" 
                      alt="Metal Gear Solid:Snake Eater"
-                     onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
+                     onerror="this.src='https://www.mediafire.com/file/y5nz8mruwek07c1/METAL_GEAR_SOLID_SNAKE_EATER.zip/file'">
             </a>
             <a href="https://www.mediafire.com/file/mclf539ju55pdy6/READY_OR_NOT.zip/file" class="grid-item">
                 <img src="img/READY OR NOT.png" 
                      alt="Ready Or Not"
-                     onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
+                     onerror="this.src='https://www.mediafire.com/file/mclf539ju55pdy6/READY_OR_NOT.zip/file'">
             </a>
             <a href="https://www.mediafire.com/file/7okcmp5csqyc7t8/THE_LAST_OF_US_PART_I.zip/file" class="grid-item">
                 <img src="img/THE LAST OF US PART1.png" 
                      alt="The Last Of Us Part I"
-                     onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
+                     onerror="this.src='https://www.mediafire.com/file/7okcmp5csqyc7t8/THE_LAST_OF_US_PART_I.zip/file'">
             </a>
             <a href="https://www.mediafire.com/file/r0btb4lyp3d7a3r/GOD_OF_WAR_RAGNAROK.zip/file" class="grid-item">
                 <img src="img/GOD OF WAR RAGNAROK.png" 
                      alt="God Of War Ragnarok"
-                     onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
+                     onerror="this.src='https://www.mediafire.com/file/r0btb4lyp3d7a3r/GOD_OF_WAR_RAGNAROK.zip/file'">
             </a>
             <a href="#" class="grid-item">
                 <img src="img/ASSASSINS CREED UNITY.png" 
