--- a/page2.html
+++ b/page2.html
@@ -86,7 +86,7 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="img/RE7 BIOHAZARD.png" 
+                <img src="img/RE7.png" 
                      alt="RESIDENT EVIL 7 BIOHAZARD"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
