--- a/page2.html
+++ b/page2.html
@@ -30,7 +30,7 @@
                      alt="ASSASSINS CREED MIRAGE"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
-            <a href="#" class="grid-item">
+            <a href="https://www.mediafire.com/file/arczwd4yeul1pld/LIKE_A_DRAGON_PIRATE_YAKUZA.zip/file" class="grid-item">
                 <img src="img/LIKE A DRAGON PIRATE YAKUZA IN HAWAII.png" 
                      alt="LIKE A DRAGON: PIRATE YAKUZA IN HAWAII"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
