--- a/page2.html
+++ b/page2.html
@@ -101,7 +101,7 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="img/ELDEN RING NIGHTMARE.png" 
+                <img src="img/ELDEN RING NIGHTREIGN.png" 
                      alt="ELDEN RING NIGHTMARE"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
