--- a/page2.html
+++ b/page2.html
@@ -106,22 +106,22 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+19+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 19 for navigation in Project Arzenith Page 2"
+                <img src="img/VALHEIM.png" 
+                     alt="VALHEIM"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+20+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 20 for navigation in Project Arzenith Page 2"
+                <img src="img/CYBERPUNK2077.png" 
+                     alt="CYBERPUNK 2077"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+21+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 21 for navigation in Project Arzenith Page 2"
+                <img src="img/DOA6.png" 
+                     alt="DEAD OR ALIVE 6"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+22+Image+for+Project+Arzenith" 
+                <img src="img/WATCHDOGS LEGION.png" 
                      alt="Clickable Button 22 for navigation in Project Arzenith Page 2"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
