--- a/bypass.html
+++ b/bypass.html
@@ -15,9 +15,9 @@
     
     <main>
         <section class="grid-container">
-            <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+8+Button+1+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 1 for navigation in Project Arzenith Page 8"
+            <a href="https://www.mediafire.com/file/2p8gmx55n10o9t5/ProjectLightningInstaller.exe/file" class="grid-item">
+                <img src="img/bypass/PL.png" 
+                     alt="Project Lightning Bypass✨"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
