--- a/page2.html
+++ b/page2.html
@@ -122,12 +122,12 @@
             </a>
             <a href="#" class="grid-item">
                 <img src="img/WATCHDOGS LEGION.png" 
-                     alt="Clickable Button 22 for navigation in Project Arzenith Page 2"
+                     alt="WATCHDOGS LEGION"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+23+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 23 for navigation in Project Arzenith Page 2"
+                <img src="img/GHOSTRECON.png" 
+                     alt="TOM CLANCY GHOST RECON WILDLANDS"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
