--- a/page2.html
+++ b/page2.html
@@ -15,17 +15,17 @@
     
     <main>
         <section class="grid-container">
-            <a href="#" class="grid-item">
+            <a href="https://www.mediafire.com/file/xzijklskgan1opo/ASSASSINS_CREED_ORIGINS.zip/file" class="grid-item">
                 <img src="img/ASSASSINS CREED ORIGINS.png" 
                      alt="ASSASSINS CREED ORIGINS"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
-            <a href="#" class="grid-item">
+            <a href="https://www.mediafire.com/file/yc6184j2ig2bdma/ASSASSNS_CREED_ODYSSEY.zip/file" class="grid-item">
                 <img src="img/ASSASSINS CREED ODYSSEY.png" 
                      alt="ASSASSINS CREED ODYSSEY"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
-            <a href="#" class="grid-item">
+            <a href="https://www.mediafire.com/file/pw0tsfzh39g8z2v/ASSASSINS_CREED_MIRAGE.zip/file" class="grid-item">
                 <img src="img/ASSASSINS CREED MIRAGE.png" 
                      alt="ASSASSINS CREED MIRAGE"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
