--- a/page2.html
+++ b/page2.html
@@ -131,8 +131,8 @@
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+2+Button+24+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 24 for navigation in Project Arzenith Page 2"
+                <img src="img/GTAVLEGACY.png" 
+                     alt="GTA V LEGACY"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
         </section>
