--- a/page3.html
+++ b/page3.html
@@ -16,18 +16,18 @@
     <main>
         <section class="grid-container">
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+3+Button+1+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 1 for navigation in Project Arzenith Page 3"
+                <img src="img/GTAVENHANCED.png" 
+                     alt="GRAND THEFT AUTO V ENHANCED"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+3+Button+2+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 2 for navigation in Project Arzenith Page 3"
+                <img src="img/BF3.png" 
+                     alt="BATTLEFIELD 3"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
-                <img src="https://placehold.co/180x320?text=Page+3+Button+3+Image+for+Project+Arzenith" 
-                     alt="Clickable Button 3 for navigation in Project Arzenith Page 3"
+                <img src="img/BF4.png" 
+                     alt="BATTLEFIELD 4"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
             <a href="#" class="grid-item">
