--- a/page2.html
+++ b/page2.html
@@ -35,17 +35,17 @@
                      alt="LIKE A DRAGON: PIRATE YAKUZA IN HAWAII"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
-            <a href="#" class="grid-item">
+            <a href="https://www.mediafire.com/file/1akt6s4fp95xnn4/WATCHDOGS.zip/file" class="grid-item">
                 <img src="img/WATCHDOGS.png" 
                      alt="Watch Dogs"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
-            <a href="#" class="grid-item">
+            <a href="https://www.mediafire.com/file/zg5qsfza8aamg2j/WATCHDOGS2.zip/file" class="grid-item">
                 <img src="img/WATCHDOGS 2.png" 
                      alt="Watch Dogs 2"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
-            <a href="#" class="grid-item">
+            <a href="https://www.mediafire.com/file/eexdua0bkrivnbw/OUTLAST.zip/file" class="grid-item">
                 <img src="img/OUTLAST.png" 
                      alt="OUTLAST"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
@@ -55,22 +55,22 @@
                      alt="OUTLAST: WHISTLEBLOWER"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
-            <a href="#" class="grid-item">
+            <a href="https://www.mediafire.com/file/srdz1ii0sfpgtvz/OUTLAST2.zip/file" class="grid-item">
                 <img src="img/OUTLAST 2.png" 
                      alt="OUTLAST II"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
-            <a href="#" class="grid-item">
+            <a href="https://www.mediafire.com/file/yhcieeyxqt4exq9/RE2.zip/file" class="grid-item">
                 <img src="img/RE2.png" 
                      alt="RESIDENT EVIL 2"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
-            <a href="#" class="grid-item">
+            <a href="https://www.mediafire.com/file/sf1kx41k14dhn2e/RE3.zip/file" class="grid-item">
                 <img src="img/RE3.png" 
                      alt="RESIDENT EVIL 3"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
             </a>
-            <a href="#" class="grid-item">
+            <a href="https://www.mediafire.com/file/flr16enomcfoeul/RE4.zip/file" class="grid-item">
                 <img src="img/RE4.png" 
                      alt="RESIDENT EVIL 4"
                      onerror="this.src='https://placehold.co/180x320?text=Fallback+Image+for+Button+Error'">
